# git-commit-creator

./: .gitignore  Cargo.toml  LICENSE  PROMPT.md  README.md  bump-version.sh  git_branch_search.py  ralph.yml
.agent/: summary.md  tasks.jsonl
.github/workflows/: release.yml
.ralph/: current-events  events-20260130-191219.jsonl  events-20260130-194013.jsonl  events.jsonl  history.jsonl
src/: config.rs  git.rs  key_handler.rs  main.rs  ui.rs
