[package]
name = "gitcc"
version = "1.0.4"
edition = "2021"
authors = ["Harrison Oest <harrison.oest@gmail.com>"]
description = "A beautiful command-line tool for streamlined git operations with interactive TUI"
license = "MIT"
repository = "https://github.com/harrisonoest/gitcc"
homepage = "https://github.com/harrisonoest/gitcc"
documentation = "https://github.com/harrisonoest/gitcc"
keywords = ["git", "cli", "tui", "commit", "conventional-commits"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4.4", features = ["derive"] }
git2 = "0.19"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
serde = "1.0.226"
dirs = "6.0.0"
toml = "0.9.7"
